<resources>
    <string name="app_name">Joy23Final</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dgts__login_digits_text">Sign Up</string>
    <string name="dgts__phone_number_text">Enter your phone number</string>
    <string name="agree_continue">Agree &amp; Continue</string>
    <string name="by_createing_account">By creating an account,you agree to the Joy23</string>
    <string name="terms_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="username_field_required"></string>
</resources>
